Revert "Remove autotools products"
This reverts commit c638e9ad047f5192ee131ed8ec3d9851fbbedd2e.

--- a/.gitignore
+++ b/.gitignore
@@ -29,25 +29,18 @@
 .DS_Store
 modules.order
 Makefile
-Makefile.in
 
 #
 # Top level generated files specific to this top level dir
 #
-/configure
+/Makefile
 /config.log
 /config.status
 /libtool
 /spl_config.h
 /spl.spec
 /spl-modules.spec
-/spl.release
-/dkms.conf
-/PKGBUILD-spl
-/PKGBUILD-spl-modules
 /stamp-h1
-/aclocal.m4
-/autom4te.cache
 
 #
 # Top level generic files
